--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <title>World Time Challenge</title>
 </head>
-<body class="body-container">
+<body>
+  <div class="body-container">
     <div class="clock london-clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
         <div class="hand second-hand"></div>
+        <div class="dot-center"></div>
         <div class="hours hour3"></div>
         <div class="hours hour6"></div>
         <div class="hours hour9"></div>
@@ -24,6 +26,7 @@
         <div class="hand hour-hand hour-handTokio"></div>
         <div class="hand min-hand min-handTokio"></div>
         <div class="hand second-hand second-handTokio"></div>
+        <div class="dot-center"></div>
         <div class="hours hour3"></div>
         <div class="hours hour6"></div>
         <div class="hours hour9"></div>
@@ -38,13 +41,14 @@
         <div class="hand hour-hand hour-handSydney"></div>
         <div class="hand min-hand min-handSydney"></div>
         <div class="hand second-hand second-handSydney"></div>
+        <div class="dot-center"></div>
         <div class="hours hour3"></div>
         <div class="hours hour6"></div>
         <div class="hours hour9"></div>
         <div class="hours hour12"></div>
           <div class="city">
             <select class="selected-cityname" name="city-selector" id="city-selectors">
-               <option class="selected-city" value="">Select A City</option>
+               <option class="selected-city" value="Guadalajara">Select A City</option>
                <option class="selected-city" value="Sydney">Sydney</option>
                <option class="selected-city" value="Bangkok">Bangkok</option>
                <option class="selected-city" value="Guadalajara">Guadalajara</option>
@@ -55,28 +59,33 @@
       <div class="temp-info temp-sydney"><span class="text-london"><span class="tempSelected"></span><span>°C</span>|<span class="tempFSelected"></span><span>°F</span></div>
       <div class="icons icon-Selcted"></div>
     </div>
-
+    <div class="canvas-body">
+    <canvas id="canvas" class="canvas"></canvas>
+    </div>
+   </div>
   <style>
     html {
       font-family:'helvetica neue';
       text-align: center;
       font-size: 10px;
+       background: #123588;
     }
-
     .body-container {
-      background: linear-gradient(to right , #0A8FFF,#123588);
-      background-size:cover;
+      background: linear-gradient(to bottom, #0A8FFF,#123588);
+      background-repeat:repeat-x;
+      background-size: cover;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr auto 1fr;
+      grid-template-rows: 1fr 1fr;
     }
     .city {
       position: absolute;
       bottom: 30px;
-      left: 30%;
+      left: 31%;
+      text-shadow: 1px 1px rgba(255,255,255,0.2);
       font-size: 30px;
       font-weight: 600;
-      color: rgba(255,255,255,0.7);
+      color: rgba(255,255,255,0.9);
       z-index: auto;
     }
     select {
@@ -86,9 +95,10 @@
       margin: 0px;
       position: relative;
       font-size: 30px;
+      text-shadow: 1px 1px rgba(255,255,255,0.4);
       background: rgba(255, 255, 255, 0.0);
       border: none;
-      color: rgba(255,255,255,0.7);
+      color: rgba(255,255,255,0.9);
       font-weight: 600;
       font-family:'helvetica neue';
       text-align: center;
@@ -116,12 +126,12 @@
     .clock {
       width: 25rem;
       height: 25rem;
-      border:5px solid rgba(255,255,255,0.8);
+      border:5px solid rgba(255,255,255,0.9);
       border-radius:50%;
       margin:50px auto;
       position: relative;
       padding:2rem;
-      background: rgba(0, 0, 0, 0.2);
+      background: rgba(0, 0, 0, 0.3);
       box-shadow:
       0 0 0 4px rgba(0,0,0,0.1),
       inset 0 0 0 3px #EFEFEF,
@@ -137,7 +147,7 @@
     .hour-hand {
       width:50%;
       height:8px;
-      background:black;
+      background:rgba(0,0,0,0.8);
       position: absolute;
       top:50%;
       left: 10%;
@@ -145,11 +155,16 @@
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      border-radius:50%;
+      box-shadow:
+      inset 0 0 0 1px rgba(255,255,255,0.5),
+      0 0 1px rgba(255,255,255,0.2);
+      z-index: 7;
     }
     .min-hand {
       width:50%;
       height:5px;
-      background:black;
+      background:rgba(0,0,0,0.8);
       position: absolute;
       top:50%;
       left: 10%;
@@ -157,11 +172,16 @@
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      border-radius:50%;
+      box-shadow:
+      inset 0 0 0 1px rgba(255,255,255,0.5),
+      0 0 1px rgba(255,255,255,0.2);
+      z-index: 8;
     }
     .second-hand {
       width:50%;
       height:3px;
-      background:red;
+      background:rgba(255,0,0,0.8);
       position: absolute;
       top:50%;
       left: 10%;
@@ -169,6 +189,26 @@
       transform: rotate(90deg);
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      border-radius:80%;
+      box-shadow:
+      0 0 0 1px rgba(255,255,255,0.1),
+      inset 0 0 0 1px rgba(255,255,255,0.1),
+      0 0 1px rgba(255,255,255,0.1);
+      z-index: 9;
+    }
+    .dot-center {
+      width:10px;
+      height:10px;
+      background:black;
+      position: relative;
+      top:calc(50% - 3px);
+      left:calc(50% - 5px);
+      border-radius:50%;
+      z-index:10;
+      box-shadow:
+      0 0 0 1px rgba(255,255,255,0.2),
+      inset 0 0 0 1px rgba(255,255,255,0.2),
+      0 0 1px rgba(255,255,255,0.2);
     }
     .hours {
       width:7%;
@@ -176,6 +216,13 @@
       background:black;
       position: absolute;
       transform: rotate(90deg);
+      background:rgba(0,0,0,0.8);
+      border-radius:50%;
+      box-shadow:
+      0 0 0 1px rgba(255,255,255,0.2),
+      inset 0 0 0 1px rgba(255,255,255,0.2),
+      0 0 1px rgba(255,255,255,0.2);
+
     }
     .hour3 {
       transform: rotate(0deg);
@@ -209,21 +256,24 @@
         top: 50px;
         font-size: 30px;
         font-weight: 600;
-        color: rgba(255,255,255,0.7);
+        color: rgba(255,255,255,0.85);
+        text-shadow: 1px 1px rgba(255,255,255,0.2);
     }
     .temp-tokyo {
       position: relative;
       top: 50px;
       font-size: 30px;
       font-weight: 600;
-      color: rgba(255,255,255,0.7);
+      color: rgba(255,255,255,0.85);
+      text-shadow: 1px 1px rgba(255,255,255,0.2);
     }
     .temp-sydney {
       position: relative;
       top: 50px;
       font-size: 30px;
       font-weight: 600;
-      color: rgba(255,255,255,0.7);
+      color: rgba(255,255,255,0.85);
+      text-shadow: 1px 1px rgba(255,255,255,0.2);
     }
     .temp-info {
       position: relative;
