--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -62,7 +62,6 @@
       text-align: center;
       font-size: 10px;
     }
-
     .body-container {
       background: linear-gradient(to right , #0A8FFF,#123588);
       background-size:cover;
@@ -231,13 +230,10 @@
 
     }
 </style>
-
 <script>
-
 //  LONDON Clock starts---------------------------------------------------------------------------------------------------------------------------------------------- -->
 let offset = '';
 let guadalajaraOffset = '';
-
 fetch(' https://maps.googleapis.com/maps/api/timezone/json?location=51.5073,-0.1277&timestamp=1331161200&key=AIzaSyANpHwd0ZvP_2qrvqEEp-5l6NS3LkwxSbY ')
   .then(function(response) {
     return response.json();
@@ -252,35 +248,28 @@ fetch(' https://maps.googleapis.com/maps/api/timezone/json?location=51.5073,-0.1
     .then(function(guadalajara) {
        guadalajaraOffset = guadalajara.rawOffset;
     });
-
 const secondHand = document.querySelector('.second-hand');
 const minsHand = document.querySelector('.min-hand');
 const hourHand = document.querySelector('.hour-hand');
-
 function setDate() {
   const now = new Date();
   const seconds = now.getSeconds();
   const secondsDegrees = ((seconds / 60) * 360) + 90;
   secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-
   const mins = now.getMinutes();
   const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
   minsHand.style.transform = `rotate(${minsDegrees}deg)`;
-
   const hour = now.getHours();
   const offsetHours = (offset / 3600);
   const guadalajaraOffsetHours = (guadalajaraOffset / 3600)
   const hourDegrees = (((hour + offsetHours + guadalajaraOffsetHours) / 12) * 360) + ((mins/60)*30) + 90;
   hourHand.style.transform = `rotate(${hourDegrees}deg)`;
 }
-
 setInterval(setDate, 1000);
-
 setDate();
 //  LONDON Clock Ends---------------------------------------------------------------------------------------------------------------------------------------------- -->
 // TOKIO Clock Starts---------------------------------------------------------------------------------------------------------------------------------------------- -->
 let offsetTokio = '';
-
 fetch(' https://maps.googleapis.com/maps/api/timezone/json?location=35.6895,135.6917&timestamp=1331161200&key=AIzaSyANpHwd0ZvP_2qrvqEEp-5l6NS3LkwxSbY ')
   .then(function(response) {
     return response.json();
@@ -288,7 +277,6 @@ fetch(' https://maps.googleapis.com/maps/api/timezone/json?location=35.6895,135.
   .then(function(tokio) {
      offsetTokio = tokio.rawOffset;
   });
-
 const secondHandTokio = document.querySelector('.second-handTokio');
 const minsHandTokio = document.querySelector('.min-handTokio');
 const hourHandTokio = document.querySelector('.hour-handTokio');
@@ -297,11 +285,9 @@ function setDateTokio() {
   const secondsTokio = nowTokio.getSeconds();
   const secondsDegreesTokio = ((secondsTokio / 60) * 360) + 90;
   secondHandTokio.style.transform = `rotate(${secondsDegreesTokio}deg)`;
-
   const minsTokio = nowTokio.getMinutes();
   const minsDegreesTokio = ((minsTokio / 60) * 360) + ((secondsTokio / 60)*6) + 90;
   minsHandTokio.style.transform = `rotate(${minsDegreesTokio}deg)`;
-
   const hourTokio = nowTokio.getHours();
   const offsetHoursTokio = (offsetTokio / 3600);
   const guadalajaraOffsetHours = (guadalajaraOffset / 3600);
@@ -346,7 +332,6 @@ const citiesDropdown = document.querySelector('#city-selectors');
 let selectedCity = citiesDropdown.value;
 let latSelectedClock = citiescord[selectedCity].lat;
 let lonSelectedClock = citiescord[selectedCity].lon;
-
 fetch(`https://maps.googleapis.com/maps/api/timezone/json?location=${latSelectedClock},${lonSelectedClock}&timestamp=1331161200&key=AIzaSyANpHwd0ZvP_2qrvqEEp-5l6NS3LkwxSbY `)
 .then(function(response) {
   return response.json();
@@ -381,15 +366,12 @@ const changTimeClick = document.querySelectorAll('option');
 changTimeClick.forEach(option => option.addEventListener('click', changeTime));
 // Sydney Clock ENDS---------------------------------------------------------------------------------------------------------------------------------------------- -->
 // London wheather Starts---------------------------------------------------------------------------------------------------------------------------------------------- -->
-
 let wheather = '';
 let wheatherfahrenheit = '';
 let lat = 33;
 let lon = 151;
-
 let latTokyo = 35.6;
 let lonTokyo = 135.7;
-
 function getWheatherLondon() {
 fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&units=metric&APPID=261e313010ab3d43b1344ab9eba64cfa`)
   .then(function(response) {
@@ -408,10 +390,8 @@ fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&unit
 }
   getWheatherLondon();
   setInterval(getWheatherLondon, 600000);
-
 // Starts Tokyo Wheather ----------------------------------------------------------------------------------------------------------------------------------------
 let wheatherTokyo = '';
-
 function getWheatherTokyo() {
 fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${latTokyo}&lon=${lonTokyo}&units=metric&APPID=261e313010ab3d43b1344ab9eba64cfa`)
   .then(function(response) {
@@ -428,13 +408,9 @@ fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${latTokyo}&lon=${lonT
 }
   getWheatherTokyo();
   setInterval(getWheatherTokyo, 600000);
-
 // Starts Sydney Wheather ----------------------------------------------------------------------------------------------------------------------------------------
-
 wheatherSydney = '';
 wheatherSydneyF = '';
-
-
 function getWheatherSelected() {
   let citiescord = {
     Mexico: {
@@ -481,8 +457,8 @@ function getWheatherSelected() {
 }
   getWheatherSelected();
   setInterval(getWheatherSelected, 600000);
-const submit = document.querySelectorAll('option');
-submit.forEach(option => option.addEventListener('click', getWheatherSelected));
+const select = document.querySelectorAll('option');
+select.forEach(option => option.addEventListener('click', getWheatherSelected));
 console.log(submit);
 </script>
 </body>
