--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -33,9 +33,9 @@
         <div class="hours hour9"></div>
         <div class="hours hour12"></div>
         <div class="city Tokyocity">
-          <form action="/action_page.php">
-           <input type="text" name="City"><br>
-           <input type="submit" value="Submit">
+          <form style="input-city" id="form">
+             <input style="input input-value" type="text" name="City" value="City"><br>
+             <input style="input input-submit" type="submit" value="Submit">
            </form>
         </div>
       </div>
@@ -86,8 +86,6 @@
     <div class="results-list">
       <ul class="list-ul"></ul>
     <div>
-
-
    </div>
   <style>
 </style>
@@ -147,13 +145,49 @@ setInterval(setDate, 1000);
 setDate();
 //  LONDON Clock Ends---------------------------------------------------------------------------------------------------------------------------------------------- -->
 // TOKIO Clock Starts---------------------------------------------------------------------------------------------------------------------------------------------- -->
-let offsetTokio = '';
-fetch(' https://maps.googleapis.com/maps/api/timezone/json?location=35.6895,135.6917&timestamp=1331161200&key=AIzaSyANpHwd0ZvP_2qrvqEEp-5l6NS3LkwxSbY ')
+let offsetinputCity = '';
+let latInputCity = 0;
+let lonInputCity = 0;
+let inputValue = '';
+
+// function getValue(e) {
+//   e.preventDefault();
+//   inputValue = document.querySelector('.input-value').value
+//   console.log("value",inputValue);
+// }
+
+
+fetch(` https://maps.googleapis.com/maps/api/geocode/json?address=NoviSad&key=AIzaSyAhbhZNE6A-Zcg49SMCyO7r_lH4MCDylRc `)
   .then(function(response) {
     return response.json();
   })
-  .then(function(tokio) {
-     offsetTokio = tokio.rawOffset;
+  .then(function(inputCity) {
+     latInputCity = inputCity.results[0].geometry.location.lat;
+     lonInputCity = inputCity.results[0].geometry.location.lng;
+     })
+  .then(function(){
+  fetch(`https://maps.googleapis.com/maps/api/timezone/json?location=${latInputCity},${lonInputCity}&timestamp=1331161200&key=AIzaSyANpHwd0ZvP_2qrvqEEp-5l6NS3LkwxSbY `)
+    .then(function(response) {
+      return response.json();
+    })
+    .then(function(inputCity) {
+        offsetinputCity = inputCity.rawOffset
+       console.log(inputCity);
+    })
+    .then(function(){
+    fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${latInputCity}&lon=${lonInputCity}&units=metric&APPID=261e313010ab3d43b1344ab9eba64cfa`)
+      .then(function(response) {
+        return response.json();
+      })
+      .then(function(data) {
+        wheatherTokyo = data.main.temp ;
+        document.querySelector(".tempTokyo").innerHTML = `${Math.round(wheatherTokyo)}`;
+        let wheatherTokyoF = (wheatherTokyo * 1.8)+32;
+        document.querySelector(".tempFTokyo").innerHTML = `${Math.round(wheatherTokyoF)}`;
+        wheatherIconTokyo = data.weather[0].icon;
+        document.querySelector(".icon-Tokyo").innerHTML = `<img class="icon-Img-Tokyo" src="../content/${wheatherIconTokyo}.png" width="70px" height="70px">`;
+      });
+    });
   });
 const secondHandTokio = document.querySelector('.second-handTokio');
 const minsHandTokio = document.querySelector('.min-handTokio');
@@ -167,14 +201,31 @@ function setDateTokio() {
   const minsDegreesTokio = ((minsTokio / 60) * 360) + ((secondsTokio / 60)*6) + 90;
   minsHandTokio.style.transform = `rotate(${minsDegreesTokio}deg)`;
   const hourTokio = nowTokio.getHours();
-  const offsetHoursTokio = (offsetTokio / 3600);
+  const offsetHoursTokio = (offsetinputCity / 3600);
   const guadalajaraOffsetHours = (guadalajaraOffset / 3600);
   const hourDegreesTokio = (((hourTokio + offsetHoursTokio + guadalajaraOffsetHours) / 12) * 360) + ((minsTokio/60)*30) + 90;
-  console.log("tokio",hourDegreesTokio);
   hourHandTokio.style.transform = `rotate(${hourDegreesTokio}deg)`;
 }
 setInterval(setDateTokio, 1000);
 setDateTokio();
+// Starts Tokyo Wheather ----------------------------------------------------------------------------------------------------------------------------------------
+let wheatherTokyo = '';
+function getWheatherTokyo() {
+fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${latInputCity}&lon=${lonInputCity}&units=metric&APPID=261e313010ab3d43b1344ab9eba64cfa`)
+  .then(function(response) {
+    return response.json();
+  })
+  .then(function(data) {
+    wheatherTokyo = data.main.temp ;
+    document.querySelector(".tempTokyo").innerHTML = `${Math.round(wheatherTokyo)}`;
+    let wheatherTokyoF = (wheatherTokyo * 1.8)+32;
+    document.querySelector(".tempFTokyo").innerHTML = `${Math.round(wheatherTokyoF)}`;
+    wheatherIconTokyo = data.weather[0].icon;
+    document.querySelector(".icon-Tokyo").innerHTML = `<img class="icon-Img-Tokyo" src="../content/${wheatherIconTokyo}.png" width="70px" height="70px">`;
+  });
+}
+  getWheatherTokyo();
+  setInterval(getWheatherTokyo, 600000);
 // TOKIO Clock Ends---------------------------------------------------------------------------------------------------------------------------------------------- -->
 // SYDNEY Clock Starts---------------------------------------------------------------------------------------------------------------------------------------------- -->
 let citiescord = {
@@ -335,31 +386,13 @@ fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&unit
     let wheatherLondonF = (wheatherLondon * 1.8)+32;
     document.querySelector(".tempFLondon").innerHTML = `${Math.round(wheatherLondonF)}`
     wheatherIconLondon = data.weather[0].icon;
-    console.clear();
     console.log("wheatherIconLondon",wheatherIconLondon);
     document.querySelector(".icon-London").innerHTML = `<img class="icon-Img-London" src="../content/${wheatherIconLondon}.png" width="70px" height="70px">`;
   });
 }
   getWheatherLondon();
   setInterval(getWheatherLondon, 600000);
-// Starts Tokyo Wheather ----------------------------------------------------------------------------------------------------------------------------------------
-let wheatherTokyo = '';
-function getWheatherTokyo() {
-fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${latTokyo}&lon=${lonTokyo}&units=metric&APPID=261e313010ab3d43b1344ab9eba64cfa`)
-  .then(function(response) {
-    return response.json();
-  })
-  .then(function(data) {
-    wheatherTokyo = data.main.temp ;
-    document.querySelector(".tempTokyo").innerHTML = `${Math.round(wheatherTokyo)}`;
-    let wheatherTokyoF = (wheatherTokyo * 1.8)+32;
-    document.querySelector(".tempFTokyo").innerHTML = `${Math.round(wheatherTokyoF)}`;
-    wheatherIconTokyo = data.weather[0].icon;
-    document.querySelector(".icon-Tokyo").innerHTML = `<img class="icon-Img-Tokyo" src="../content/${wheatherIconTokyo}.png" width="70px" height="70px">`;
-  });
-}
-  getWheatherTokyo();
-  setInterval(getWheatherTokyo, 600000);
+
 // Starts Sydney Wheather ----------------------------------------------------------------------------------------------------------------------------------------
 wheatherSydney = '';
 wheatherSydneyF = '';
