--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -34,7 +34,7 @@
         <div class="hours hour12"></div>
         <div class="city Tokyocity">
           <form style="input-city" id="form">
-             <input style="input input-value" type="text" name="City" value="City"><br>
+             <input style="input input-value" type="text" name="inputCity" value="City"><br>
              <input style="input input-submit" type="submit" value="Submit">
            </form>
         </div>
@@ -149,46 +149,46 @@ let offsetinputCity = '';
 let latInputCity = 0;
 let lonInputCity = 0;
 let inputValue = '';
+const inputCity = document.querySelector("#form");
 
-// function getValue(e) {
-//   e.preventDefault();
-//   inputValue = document.querySelector('.input-value').value
-//   console.log("value",inputValue);
-// }
-
-
-fetch(` https://maps.googleapis.com/maps/api/geocode/json?address=NoviSad&key=AIzaSyAhbhZNE6A-Zcg49SMCyO7r_lH4MCDylRc `)
-  .then(function(response) {
-    return response.json();
-  })
-  .then(function(inputCity) {
-     latInputCity = inputCity.results[0].geometry.location.lat;
-     lonInputCity = inputCity.results[0].geometry.location.lng;
+function getValue(e) {
+  e.preventDefault();
+   inputValue = (this.querySelector('[name=inputCity]')).value
+   fetch(` https://maps.googleapis.com/maps/api/geocode/json?address=${inputValue}&key=AIzaSyAhbhZNE6A-Zcg49SMCyO7r_lH4MCDylRc `)
+     .then(function(response) {
+       return response.json();
      })
-  .then(function(){
-  fetch(`https://maps.googleapis.com/maps/api/timezone/json?location=${latInputCity},${lonInputCity}&timestamp=1331161200&key=AIzaSyANpHwd0ZvP_2qrvqEEp-5l6NS3LkwxSbY `)
-    .then(function(response) {
-      return response.json();
-    })
-    .then(function(inputCity) {
-        offsetinputCity = inputCity.rawOffset
-       console.log(inputCity);
-    })
-    .then(function(){
-    fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${latInputCity}&lon=${lonInputCity}&units=metric&APPID=261e313010ab3d43b1344ab9eba64cfa`)
-      .then(function(response) {
-        return response.json();
-      })
-      .then(function(data) {
-        wheatherTokyo = data.main.temp ;
-        document.querySelector(".tempTokyo").innerHTML = `${Math.round(wheatherTokyo)}`;
-        let wheatherTokyoF = (wheatherTokyo * 1.8)+32;
-        document.querySelector(".tempFTokyo").innerHTML = `${Math.round(wheatherTokyoF)}`;
-        wheatherIconTokyo = data.weather[0].icon;
-        document.querySelector(".icon-Tokyo").innerHTML = `<img class="icon-Img-Tokyo" src="../content/${wheatherIconTokyo}.png" width="70px" height="70px">`;
-      });
-    });
-  });
+     .then(function(inputCity) {
+        latInputCity = inputCity.results[0].geometry.location.lat;
+        lonInputCity = inputCity.results[0].geometry.location.lng;
+        })
+     .then(function(){
+     fetch(`https://maps.googleapis.com/maps/api/timezone/json?location=${latInputCity},${lonInputCity}&timestamp=1331161200&key=AIzaSyANpHwd0ZvP_2qrvqEEp-5l6NS3LkwxSbY `)
+       .then(function(response) {
+         return response.json();
+       })
+       .then(function(inputCity) {
+           offsetinputCity = inputCity.rawOffset
+          console.log(inputCity);
+       })
+       .then(function(){
+       fetch(`http://api.openweathermap.org/data/2.5/weather?lat=${latInputCity}&lon=${lonInputCity}&units=metric&APPID=261e313010ab3d43b1344ab9eba64cfa`)
+         .then(function(response) {
+           return response.json();
+         })
+         .then(function(data) {
+           wheatherTokyo = data.main.temp ;
+           document.querySelector(".tempTokyo").innerHTML = `${Math.round(wheatherTokyo)}`;
+           let wheatherTokyoF = (wheatherTokyo * 1.8)+32;
+           document.querySelector(".tempFTokyo").innerHTML = `${Math.round(wheatherTokyoF)}`;
+           wheatherIconTokyo = data.weather[0].icon;
+           document.querySelector(".icon-Tokyo").innerHTML = `<img class="icon-Img-Tokyo" src="../content/${wheatherIconTokyo}.png" width="70px" height="70px">`;
+         });
+       });
+     });
+}
+
+  inputCity.addEventListener("submit", getValue);
 const secondHandTokio = document.querySelector('.second-handTokio');
 const minsHandTokio = document.querySelector('.min-handTokio');
 const hourHandTokio = document.querySelector('.hour-handTokio');
