--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -89,11 +89,13 @@
       <div class="icons icon-AllWorld"></div>
     </div>
     <div class="canvas-body">
-      <img src="../content/Earthmap.jpg" class="world-map" width="1000px" height="500px">
+      <img src="../content/Earthmap.jpg" class="world-map" width="1000px" height="500px" data-pixels="px">
     </div>
     <div class="results-list">
+      <div class="movingDiv" data-sizing="px"><div class="movingLat"><span class="LonLat">Lat:</span><span class="LonLat spanLat"></span></div><div class="movingLong"><span class="LonLat">Lon:</span><span class="LonLat spanLon"></span></div><div>
       <ul class="list-ul"></ul>
-      <div>
+    </div>
+
       </div>
       <style>
       </style>
