--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -91,20 +91,18 @@
     <div class="canvas-body">
       <img src="../content/Earthmap.jpg" class="world-map" width="1000px" height="500px" data-pixels="px">
     </div>
-    <div class="results-list">
-      <div class="movingDiv" data-sizing="px"><div class="movingLat"><span class="LonLat">Lat:</span><span class="LonLat spanLat"></span></div><div class="movingLong"><span class="LonLat">Lon:</span><span class="LonLat spanLon"></span></div><div>
-      <ul class="list-ul"></ul>
+    <div class="wrapper">
+      <h2>SAVED PLACES</h2>
+      <p></p>
+      <ul class="list">
+      </ul>
     </div>
-
       </div>
-      <style>
-      </style>
+        <div class="movingDiv" data-sizing="px"><div class="movingLat"><span class="LonLat">Lat:</span><span class="LonLat spanLat"></span></div><div class="movingLong"><span class="LonLat">Lon:</span><span class="LonLat spanLon"></span></div><div>
       <script src="clockone.js"></script>
       <script src="clocktwo.js"></script>
       <script src="clocktree.js"></script>
       <script src="clockfour.js"></script>
       <script src="clockfive.js"></script>
-      <script>
-      </script>
     </body>
     </html>
