--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -99,10 +99,10 @@
     </div>
       </div>
         <div class="movingDiv" data-sizing="px"><div class="movingLat"><span class="LonLat">Lat:</span><span class="LonLat spanLat"></span></div><div class="movingLong"><span class="LonLat">Lon:</span><span class="LonLat spanLon"></span></div><div>
-      <script src="clockone.js"></script>
-      <script src="clocktwo.js"></script>
-      <script src="clocktree.js"></script>
-      <script src="clockfour.js"></script>
-      <script src="clockfive.js"></script>
+      <script src="./JS/clockone.js"></script>
+      <script src="./JS/clocktwo.js"></script>
+      <script src="./JS/clocktree.js"></script>
+      <script src="./JS/clockfour.js"></script>
+      <script src="./JS/clockfive.js"></script>
     </body>
     </html>
