--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -88,8 +88,24 @@
       <div class="temp-info tempAllWorld"><span class="text-london"><span class="temp temp-AllWorld"></span><span>°C</span>|<span class="temp tempF-AllWorld"></span><span>°F</span></div>
       <div class="icons icon-AllWorld"></div>
     </div>
-    <div class="canvas-body">
-      <img src="../content/Earthmap.jpg" class="world-map" width="1000px" height="500px" data-pixels="px">
+    <div class="world-map">
+      <div class="img img1" id="1"></div>
+      <div class="img img2" id="2"></div>
+      <div class="img img3" id="3"></div>
+      <div class="img img4" id="4"></div>
+      <div class="img img5" id="5"></div>
+      <div class="img img6" id="6"></div>
+      <div class="img img7" id="7"></div>
+      <div class="img img8" id="8"></div>
+      <div class="img img9" id="9"></div>
+      <div class="img img10" id="10"></div>
+      <div class="img img11" id="11"></div>
+      <div class="img img12" id="12"></div>
+      <div class="img img13" id="13"></div>
+      <div class="img img14" id="14"></div>
+      <div class="img img15" id="15"></div>
+      <div class="img img16" id="16"></div>
+      <div class="zoomed"></div>
     </div>
     <div class="wrapper">
       <h2>SAVED PLACES</h2>
