--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -89,23 +89,26 @@
       <div class="icons icon-AllWorld"></div>
     </div>
     <div class="world-map">
-      <div class="img img1" id="1"></div>
-      <div class="img img2" id="2"></div>
-      <div class="img img3" id="3"></div>
-      <div class="img img4" id="4"></div>
-      <div class="img img5" id="5"></div>
-      <div class="img img6" id="6"></div>
-      <div class="img img7" id="7"></div>
-      <div class="img img8" id="8"></div>
-      <div class="img img9" id="9"></div>
-      <div class="img img10" id="10"></div>
-      <div class="img img11" id="11"></div>
-      <div class="img img12" id="12"></div>
-      <div class="img img13" id="13"></div>
-      <div class="img img14" id="14"></div>
-      <div class="img img15" id="15"></div>
-      <div class="img img16" id="16"></div>
+      <div class="img img1" id="1" data-minlon="-180" data-maxlat="90"></div>
+      <div class="img img2" id="2" data-minlon="-90" data-maxlat="90"></div>
+      <div class="img img3" id="3" data-minlon="0" data-maxlat="90"></div>
+      <div class="img img4" id="4" data-minlon="90" data-maxlat="90"></div>
+      <div class="img img5" id="5" data-minlon="-180" data-maxlat="45"></div>
+      <div class="img img6" id="6" data-minlon="-90" data-maxlat="45"></div>
+      <div class="img img7" id="7" data-minlon="0" data-maxlat="45"></div>
+      <div class="img img8" id="8" data-minlon="90" data-maxlat="45"></div>
+      <div class="img img9" id="9" data-minlon="-180" data-maxlat="0"></div>
+      <div class="img img10" id="10" data-minlon="-90" data-maxlat="0"></div>
+      <div class="img img11" id="11" data-minlon="0" data-maxlat="0"></div>
+      <div class="img img12" id="12" data-minlon="90" data-maxlat="0"></div>
+      <div class="img img13" id="13" data-minlon="-180" data-maxlat="-45"></div>
+      <div class="img img14" id="14" data-minlon="-90" data-maxlat="-45"></div>
+      <div class="img img15" id="15" data-minlon="0" data-maxlat="-45"></div>
+      <div class="img img16" id="16" data-minlon="90" data-maxlat="-45"></div>
       <div class="zoomed"></div>
+
+
+
     </div>
     <div class="wrapper">
       <h2>SAVED PLACES</h2>
