--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -35,7 +35,6 @@
         <div class="city InputCity">
           <form style="input-city" id="form">
             <input style="input input-value" type="text" name="inputCity" value="City"><br>
-            <!-- <input style="input input-submit" type="submit" value="Submit"> -->
           </form>
         </div>
       </div>
@@ -193,7 +192,7 @@
 
     </div>
     <div class="wrapper">
-      <h2>SAVED PLACES</h2>
+      <h2>RECENT PLACES</h2>
       <p></p>
       <ul class="list">
       </ul>
