--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -217,7 +217,36 @@
       </ul>
     </div>
       </div>
-        <div class="movingDiv"><div class="movingLat"><span class="LonLat">Lat:</span><span class="LonLat spanLat"></span></div><div class="movingLong"><span class="LonLat">Lon:</span><span class="LonLat spanLon"></span></div><span class="LonLat cornerTemp"></span><span class="LonLat cornerTempF"></span><span class="LonLat cornerDay"></span></div>
+
+
+      <div class="movingDiv">
+        <div class="movingLat">
+          <span class="LonLat">Lat:</span><span class="LonLat spanLat"></span>
+        </div>
+        <div class="movingLong">
+          <span class="LonLat cityCorner"></span>
+          <span class="LonLat">Lon:</span><span class="LonLat spanLon"></span>
+        </div>
+        <span class="LonLat cornerTemp"></span><span class="LonLat cornerTempF"></span>
+        <span class="LonLat cornerDay"></span>
+      </div>
+
+      <div class="movingDivmax1000">
+        <div class="movingLat1000">
+          <span class="LonLat">Lat:</span>
+          <span class="LonLat spanLat1000"></span>
+        </div>
+        <div class="movingLong1000">
+          <span class="LonLat">Lon:</span>
+          <span class="LonLat spanLon1000"></span>
+        </div>
+        <span class="LonLat cornerTemp1000"></span><span class="LonLat cornerTempF1000"></span>
+        <span class="LonLat cornerDay1000"></span>
+        <div>
+          <span class="LonLat cityCorner1000"></span>
+        </div>
+      </div>
+
       <script src="./JS/clockone.js"></script>
       <script src="./JS/clocktwo.js"></script>
       <script src="./JS/clocktree.js"></script>
