--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -227,7 +227,9 @@
           <span class="LonLat cityCorner"></span>
           <span class="LonLat">Lon:</span><span class="LonLat spanLon"></span>
         </div>
-        <span class="LonLat cornerTemp"></span><span class="LonLat cornerTempF"></span>
+        <div>
+          <span class="LonLat cornerTemp"></span><span class="LonLat cornerTempF"></span>
+        </div>
         <span class="LonLat cornerDay"></span>
       </div>
 
@@ -240,7 +242,9 @@
           <span class="LonLat">Lon:</span>
           <span class="LonLat spanLon1000"></span>
         </div>
-        <span class="LonLat cornerTemp1000"></span><span class="LonLat cornerTempF1000"></span>
+        <div>
+          <span class="LonLat cornerTemp1000"></span><span class="LonLat cornerTempF1000"></span>
+        </div>
         <span class="LonLat cornerDay1000"></span>
         <div>
           <span class="LonLat cityCorner1000"></span>
