--- a/5 Challenges/clocks.html
+++ b/5 Challenges/clocks.html
@@ -36,6 +36,8 @@
           <form style="input-city" id="form">
             <input style="input input-value" type="text" name="inputCity" value="City"><br>
           </form>
+          <select class="selectedSelect" name="citySelected" id="citySecond">
+          </select>
         </div>
       </div>
       <div class="temp-info temp-tokyo"><span class="text-london"><span class="tempTokyo"></span><span>°C</span>|<span class="tempFTokyo"></span><span>°F</span></div>
@@ -55,6 +57,7 @@
           <form style="input-city" id="form">
             <input style="input input-value" type="text" name="inputCity" value="City"><br>
           </form>
+
         </div>
       </div>
       <div class="temp-info temp-tokyo"><span class="text-london"><span class="tempTokyo"></span><span>°C</span>|<span class="tempFTokyo"></span><span>°F</span></div>
